# UnitCalc

./: README.md  constants.py  physics.py  setup.cfg  setup.py  tox.ini  units.py
src/unitcalc/: __init__.py  constants.py  physics.py  units.py
src/unitcalc/unit_parser/: electrictian_parser.py  parse_units.py  physics_parser.py
src/unitcalc/value_types/: __init__.py  value.py
src/unitcalc/value_types/base_values/: current.py  distance.py  luminosity.py  mass.py  substance.py  temperature.py  time.py
src/unitcalc/value_types/complex_values/: charge.py  electric_potential.py  electric_resistance.py  energy.py  force.py  power.py  pressure.py
tests/: 1_test_units.py  2_test_custom_value.py  test_1_units.py  test_2_custom_value.py  test_2a_custom_value.py  test_2b_bool_custom_value.py  test_2b_custom_value_math.py  test_2b_si_value.py  test_2c_custom_value_math.py  test_2c_non_si_value.py  test_3a_bool_custom_value.py  test_3b_bool_si_value.py  test_3c_bool_non_si_value.py  test_4a_custom_value_math.py  test_4b_si_value_math.py  test_4c_non_si_value_math.py  test_5_physics.py  test_6_constants.py  test_units.py
unit_parser/: parse_units.py
value_types/: __init__.py  value.py
value_types/base_values/: current.py  distance.py  luminosity.py  mass.py  substance.py  temperature.py  time.py
value_types/complex_values/: charge.py  electric_potential.py  electric_resistance.py  energy.py  force.py  power.py  pressure.py
