[metadata]
name=unitcalc
version=2.0.1
author=Nicholas Armstrong
author_email=nkarmstrong@ucdavis.edu
description=A Python Library for doing Scientific/Engineering mathematics
long_description= file: README.md
long_description_content_type=text/markdown
url=https://github.com/P-Contorta/UnitCalc
licenes=GPLv3
license_file=LICENSE
classifiers=Development Status :: 4 - Beta
            Intended Audience :: End Users/Desktop
            Intended Audience :: Science/Research
            License :: OSI Approved :: GNU General Public License v3 (GPLv3)
            Natural Language :: English
            Programming Language :: Python :: 3.6
            Programming Language :: Python :: 3.7
            Programming Language :: Python :: 3.8
            Programming Language :: Python :: 3.9
            Programming Language :: Python :: 3.10
            Topic :: Scientific/Engineering
            Topic :: Scientific/Engineering :: Astronomy
            Topic :: Scientific/Engineering :: Chemistry
            Topic :: Scientific/Engineering :: Mathematics
            Topic :: Scientific/Engineering :: Physics
keywords=SI, units, Science, Math, Engineering, Education, STEM


[options]
python_requires= >=3.6
package_dir=
    =src
packages=find:

[options.packages.find]
where=src
